--- a/ios/optimasAI/Info.plist
+++ b/ios/optimasAI/Info.plist
@@ -48,5 +48,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+			<key>NSCameraUsageDescription</key>
+		<string>This app requires access to your camera to take photos.</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>This app requires access to your photo library to select images.</string>
+		<key>NSPhotoLibraryAddUsageDescription</key>
+		<string>This app requires access to save images to your photo library.</string>
 </dict>
 </plist>
